Update question bank page to preview questions